aggiunta di un titolo

--- a/my-astro-site/src/pages/index.astro
+++ b/my-astro-site/src/pages/index.astro
@@ -1,6 +1,11 @@
 ---
 import Layout from '../components/Layout.astro';
 ---
+<head>
+	<title>Locanda dal Barba</title>
+</head>
+
+
 
 <style>
 </style>
