--- a/my-astro-site/src/pages/index.astro
+++ b/my-astro-site/src/pages/index.astro
@@ -5,7 +5,14 @@ import Layout from '../components/Layout.astro';
 	<title>Locanda dal Barba</title>
 </head>
 
+<body>
+	<header>
 
+	</header>
+	<main>
+		<img src="/icona.png">
+	</main>
+</body>
 
 <style>
 </style>
