--- a/my-astro-site/src/pages/index.astro
+++ b/my-astro-site/src/pages/index.astro
@@ -23,6 +23,7 @@ body{
 	justify-content: center;
 	height: 100vh;
 	overflow-y: hidden;
+	background-color: rgb(219, 219, 219);
 }
 
 main{
@@ -39,6 +40,14 @@ a{
 	text-decoration: none;
 	font-family: 'Roboto', sans-serif;
   	letter-spacing: 2px;
+	color: white;
+	text-shadow: 0px 5px 20px white, 0px 0px 3px black;
+	height: 38px;
+	transition: 0.7s ease;
+}
+a:hover{
+	color: rgb(176, 47, 52);
+	text-shadow: 0px 5px 20px rgb(176, 47, 52);
 }
 
 </style>
