modifiche generali pagine

--- a/my-astro-site/src/pages/index.astro
+++ b/my-astro-site/src/pages/index.astro
@@ -7,11 +7,11 @@
 
 <body>
 	<main>
-		<a href="#">cooperativa</a>
+		<a href="/cooperativa">cooperativa</a>
 		<img src="/icona.png">
 		<div>
-			<a href="#">menù</a>
-			<a href="#">storia</a>
+			<a href="/menu">menù</a>
+			<a href="/storia">storia</a>
 		</div>
 	</main>
 </body>
