--- a/my-astro-site/src/pages/index.astro
+++ b/my-astro-site/src/pages/index.astro
@@ -44,6 +44,7 @@ a{
 	text-shadow: 0px 5px 20px white, 0px 0px 3px black;
 	height: 38px;
 	transition: 0.7s ease;
+	font-weight: bold;
 }
 a:hover{
 	color: rgb(176, 47, 52);
