--- a/my-astro-site/src/pages/index.astro
+++ b/my-astro-site/src/pages/index.astro
@@ -4,7 +4,6 @@
 <head>
 	<title>Locanda dal Barba</title>
 </head>
-
 <body>
 	<main>
 		<a href="/cooperativa">cooperativa</a>
@@ -17,38 +16,38 @@
 </body>
 
 <style>
-body{
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	height: 100vh;
-	overflow-y: hidden;
-	background-color: rgb(219, 219, 219);
-}
+	body{
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		height: 100vh;
+		overflow-y: hidden;
+		background-color: #B48C59;
+	}
 
-main{
-	display: flex;
-	justify-content: center;
-}
-div{
-	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
-}
-a{
-	font-size: 2rem;
-	text-decoration: none;
-	font-family: 'Roboto', sans-serif;
-  	letter-spacing: 2px;
-	color: white;
-	text-shadow: 0px 5px 20px white, 0px 0px 3px black;
-	height: 38px;
-	transition: 0.7s ease;
-	font-weight: bold;
-}
-a:hover{
-	color: rgb(176, 47, 52);
-	text-shadow: 0px 5px 20px rgb(176, 47, 52);
-}
+	main{
+		display: flex;
+		justify-content: center;
+	}
+	div{
+		display: flex;
+		flex-direction: column;
+		justify-content: space-between;
+	}
+	a{
+		font-size: 2rem;
+		text-decoration: none;
+		font-family: 'Roboto', sans-serif;
+		letter-spacing: 2px;
+		color: white;
+		text-shadow: 0px 5px 20px white, 0px 0px 3px black;
+		height: 38px;
+		transition: 0.7s ease;
+		font-weight: bold;
+	}
+	a:hover{
+		color: rgb(176, 47, 52);
+		text-shadow: 0px 5px 20px rgb(176, 47, 52);
+	}
 
 </style>
