--- a/my-astro-site/src/pages/menu.astro
+++ b/my-astro-site/src/pages/menu.astro
@@ -1,16 +1,34 @@
 ---
-
+    const response = await fetch('http://api.made7-g6.webe.radio/api/voci-del-menu?populate=*')
+    const data = await response.json();
+    //console.log("http://api.made7-g6.webe.radio"+data.data[0].attributes.cover.data.attributes.url)
 ---
 
 <body>
-    <a href="/"><img src="/icona.png" alt=""></a>
+
+    <header>
+
+    </header>
+
+    {
+        await data.data.map(all=>
+            <h1>{all.attributes.nome}</h1>
+            <img src={"http://api.made7-g6.webe.radio"+all.attributes.cover.data.attributes.url}>
+            <hr>
+        
+        )
+    }
 </body>
 
 <style>
 body{
-	background-color: rgb(219, 219, 219);
+    font-family: 'Roboto', sans-serif;
+    background-color: #B48C59;
+    text-shadow: 0px 2px 10px white, 0px 0px 3px black;
+    color: rgb(176, 47, 52);
 }
-    a img{
-        transform: scaleX(.1) scaleY(.1) translateX(-2950px) translateY(-1950px);
-    }
+header{
+    background-image: url('/header.png');
+    height: 150px;
+}
 </style>
