aggiunta del header

--- a/my-astro-site/src/pages/menu.astro
+++ b/my-astro-site/src/pages/menu.astro
@@ -28,7 +28,13 @@ body{
     color: rgb(176, 47, 52);
 }
 header{
-    background-image: url('/header.png');
-    height: 150px;
+    background: url('/header.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 300px;
+    width: 100%;
+}
+*{
+    margin: 0;
 }
 </style>
