--- a/my-astro-site/src/pages/menu.astro
+++ b/my-astro-site/src/pages/menu.astro
@@ -7,7 +7,7 @@
 <body>
 
     <header>
-
+        <h1></h1>
     </header>
 
     {
@@ -29,12 +29,14 @@ body{
 }
 header{
     background: url('/header.png');
-    background-size: cover;
+    background-position: center;
     background-repeat: no-repeat;
-    height: 300px;
+    height: 150px;
     width: 100%;
+    background-size: cover;
+    margin: 0px;
 }
 *{
-    margin: 0;
+    margin: 0px;
 }
 </style>
