aggiunte modifiche + pagina globale con tutte le altre informazioni

--- a/my-astro-site/src/pages/index.astro
+++ b/my-astro-site/src/pages/index.astro
@@ -15,7 +15,7 @@
 	<title>Locanda dal Barba</title>
 </head>
 <body>
-	<img src="/icona.png" id="immagine">
+	<a href="/globale"><img src="/icona.png" id="immagine"></a>
 	{}
 </body>
 
