--- a/my-astro-site/src/pages/globale.astro
+++ b/my-astro-site/src/pages/globale.astro
@@ -1,5 +1,5 @@
 ---
-
+    
 ---
 <!DOCTYPE html>
 <html lang="en">
@@ -28,48 +28,84 @@
         </nav>
     </header>
     <main>
-    
+        <article>
+            <img class="img" src="icona.png" alt="">
+        </article>
     </main>
 </body>
 </html>
 
 <style>
+main{
+    display: flex;
+    flex-direction: column;
+}
+article{
+    margin-top: 45px;
+    display: flex;
+    justify-content: center;
+}
     body{
         background-color: #B48C59;
         margin: 0;
     }
     img{
-        width: 75px;
-        height: 50px;
+        width: 90px;
+        height: 75px;
+    }
+    .img{
+        width: calc(100px * 2);
+        height: calc(75px * 2);
     }
     header{
+        width: 100%;
+        overflow-x: hidden;
         display: flex;
-        align-items: center;
         justify-content: space-between;
+        align-items: center;
         background-image: url('/header.png');
         background-size: cover;
         background-repeat: no-repeat;
         height: 150px;
+        box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.274);
+    }
+    nav{
+        width: 75%;
     }
     nav ul{
+        align-items: center;
+        flex-direction: column;
         display: flex;
-        gap: 10px;
+        gap: 15px;
         margin-right: 10px;
+        margin-right: 20px;
     }
     li{
         list-style: none;
     }
     a{
-        margin-left: 40px;
+        margin-left: 20px;
+        margin-top: 20px;
     }
     .link{
-        color: white;
+        background: white;
+        font-size: 1rem;
+        color: rgb(0, 0, 0);
+        text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.596);
         text-decoration: none;
         font-family: 'Roboto', sans-serif;
-        border-bottom: 2px solid;
+        border-bottom: 2px solid rgba(255, 255, 255, 0.404);
         border-bottom-left-radius: 10px;
         border-bottom-right-radius: 10px;
-        padding: 0px 10px;
+        padding: 2px 10px;
         margin-left: 0px;
+        box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.274), inset 0px 5px 10px rgba(0, 0, 0, 0.212);
+        transition: 1s ease;
     }
+    .link:hover{
+        border-bottom: 2px solid rgb(255, 255, 255);
+        border-bottom-left-radius: 10px;
+        border-bottom-right-radius: 10px;
+    }
+    
 </style>
