aggiunto container per gli altri

--- a/my-astro-site/src/pages/globale.astro
+++ b/my-astro-site/src/pages/globale.astro
@@ -16,13 +16,13 @@
         <nav>
             <ul>
                 <li>
-                    <a href="#" class="link">Storia</a>
+                    <a href="#storia" class="link">Storia</a>
                 </li>
                 <li>
-                    <a href="#" class="link">Chi Siamo</a>
+                    <a href="#chi-siamo" class="link">Chi Siamo</a>
                 </li>
                 <li>
-                    <a href="#" class="link">Menu</a>
+                    <a href="#locanda" class="link">La Locanda</a>
                 </li>
             </ul>
         </nav>
@@ -31,11 +31,24 @@
         <article>
             <img class="img" src="icona.png" alt="">
         </article>
+        <article>
+            <h1 id="storia">STORIA</h1>
+        </article>
+        <article>
+            <h1 id="chi-siamo">CHI SIAMO</h1>
+        </article>
+        <article>
+            <h1 id="locanda">LA LOCANDA</h1>
+        </article>
     </main>
 </body>
 </html>
 
 <style>
+*{
+    scroll-behavior: smooth;
+    font-family: 'Roboto', sans-serif;
+}
 main{
     display: flex;
     flex-direction: column;
