--- a/my-astro-site/src/pages/menu.astro
+++ b/my-astro-site/src/pages/menu.astro
@@ -7,7 +7,7 @@
 <body>
 
     <header>
-        <h1></h1>
+        <h1>Menù</h1>
     </header>
 
     {
@@ -26,17 +26,18 @@ body{
     background-color: #B48C59;
     text-shadow: 0px 2px 10px white, 0px 0px 3px black;
     color: rgb(176, 47, 52);
+    margin: 0;
+    height: 100vh;
 }
 header{
     background: url('/header.png');
     background-position: center;
     background-repeat: no-repeat;
     height: 150px;
-    width: 100%;
     background-size: cover;
-    margin: 0px;
 }
-*{
-    margin: 0px;
+header h1{
+    font-size: 3rem;
+    text-align: center;
 }
 </style>
