--- a/my-astro-site/src/pages/menu.astro
+++ b/my-astro-site/src/pages/menu.astro
@@ -35,6 +35,7 @@ header{
     background-repeat: no-repeat;
     height: 150px;
     background-size: cover;
+    padding-top: 10px;
 }
 header h1{
     font-size: 3rem;
