--- a/my-astro-site/src/pages/menu.astro
+++ b/my-astro-site/src/pages/menu.astro
@@ -3,7 +3,13 @@
     const data = await response.json();
     //console.log("http://api.made7-g6.webe.radio"+data.data[0].attributes.cover.data.attributes.url)
 ---
-
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="/icona.png">
+    <title>Menù</title>
+</head>
 <body>
 
     <header>
