aggiunta immagine + modifiche

--- a/my-astro-site/src/pages/globale.astro
+++ b/my-astro-site/src/pages/globale.astro
@@ -34,6 +34,7 @@
         <div class="menu">
             <a href="/menu">+</a>
         </div>
+        <img src="/striscia.png" class="immagineStriscia" alt="">
         <article>
             <h1 id="chi-siamo">CHI SIAMO</h1>
         </article>
@@ -59,6 +60,11 @@
 </html>
 
 <style>
+.immagineStriscia{
+    width: 120%;
+    height: 80px;
+    margin-top: 20px;
+}
     article div{
         margin-bottom: 45px;
         border-bottom: 1px solid black;
@@ -160,7 +166,7 @@
         padding: 20px;
     }
     body{
-        background-color: white;
+        background-color: #EDF2F4;
         margin: 0;
     }
     img{
