aggiunta scritta chi siamo

--- a/my-astro-site/src/pages/globale.astro
+++ b/my-astro-site/src/pages/globale.astro
@@ -37,6 +37,7 @@
         <img src="/striscia.png" class="immagineStriscia" alt="">
         <article>
             <h1 id="chi-siamo">CHI SIAMO</h1>
+            <h4>Si tratta di una innovativa realtà imprenditoriale e sociale che formula i propri progetti e fonda le proprie azioni su un obiettivo: sostenere, attraverso la ristorazione, l’inclusione economica e sociale di giovani con disturbi del neurosviluppo e di persone vulnerabili che hanno bisogno di ritrovare una propria dimensione lavorativa, valorizzando al tempo stesso il radicamento nel territorio e la presenza attiva e aperta alla comunità.</h4>
         </article>
         <article>
             <h1 id="locanda">LA LOCANDA</h1>
