--- a/my-astro-site/src/pages/globale.astro
+++ b/my-astro-site/src/pages/globale.astro
@@ -14,7 +14,6 @@
 <body>
     <header>
         <a href="https://www.locandadalbarba.it/"><img src="/icona.png" alt=""></a>
-        
         <nav>
             <ul>
                 <li>
@@ -43,11 +42,11 @@
             <h1 id="locanda">LA LOCANDA</h1>
         </article>
         <article>
-            <h1 id="storia" onclick="">STORIA</h1>
+            <h1 id="storia">STORIA</h1>
             {responseStoriaData.data.map(storiella=>
                 <div>
                     <h2>{storiella.attributes.titolo}</h2>
-                    <h4>{storiella.attributes.descrizione}</h4>
+                    <h5>{storiella.attributes.descrizione}</h5>
                 </div>
             )}
         </article>
@@ -108,7 +107,7 @@
         width: 100%;
     }
     footer{
-        background-color: rgba(0, 0, 0, 0.719);
+        background-color: #d8042be8;
         box-shadow: 0px -4px 5px rgba(0, 0, 0, 0.274);
         height: 150px;
         margin-top: 45px;
@@ -171,12 +170,8 @@
         margin: 0;
     }
     img{
-        width: 90px;
+        width: 125px;
         height: 75px;
-    }
-    .img{
-        width: calc(100px * 2);
-        height: calc(75px * 2);
     }
     header{
         width: 100%;
@@ -184,9 +179,8 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-        background-image: url('/header.png');
+        background-image: url('/header2.png');
         background-size: cover;
-        background-position: center;
         background-repeat: no-repeat;
         height: 150px;
         box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.274);
@@ -216,17 +210,14 @@
         text-decoration: none;
         font-family: 'Roboto', sans-serif;
         padding: 3px;
-        border: 1px solid #EDF2F4;
+        border: 1px solid #EF233C;
         color:#EDF2F4;
         margin-left: 0px;
         transition: 1s ease;
     }
     .link:hover{
         border: 1px solid #edf2f400;
-        border-bottom: 1px solid;
-    }
-    @media only screen and (max-width: 600px){
-
+        border-bottom: 1px solid #EF233C;
     }
     
 </style>
