--- a/my-astro-site/src/pages/menu.astro
+++ b/my-astro-site/src/pages/menu.astro
@@ -18,7 +18,7 @@
 
     {
         await data.data.map(all=>
-            <h1>{all.attributes.nome}</h1>
+            <h5>{all.attributes.nome}</h5>
             <img src={"http://api.made7-g6.webe.radio"+all.attributes.cover.data.attributes.url}>
             <hr>
         
@@ -28,23 +28,30 @@
 
 <style>
 body{
+    overflow-x: hidden;
+    width: 100vw;
     font-family: 'Roboto', sans-serif;
-    background-color: #B48C59;
+    background-color: #EDF2F4;
     text-shadow: 0px 2px 10px white, 0px 0px 3px black;
-    color: rgb(176, 47, 52);
+    color: #EDF2F4;
     margin: 0;
     height: 100vh;
 }
 header{
-    background: url('/header.png');
+    background: url('/header2.png');
     background-position: center;
     background-repeat: no-repeat;
-    height: 150px;
+    height:75px;
+    width: 100vw;
     background-size: cover;
     padding-top: 10px;
 }
 header h1{
-    font-size: 3rem;
+    font-size: 2rem;
+    text-align: center;
+}
+h5{
+    color: #2B2D42;
     text-align: center;
 }
 </style>
