aggiunta menu icon + modifica di essa nella pagina globale

--- a/my-astro-site/src/pages/globale.astro
+++ b/my-astro-site/src/pages/globale.astro
@@ -31,7 +31,7 @@
             <img class="img" src="/locanda.jpg" alt="">
         </article>
         <div class="menu">
-            <a href="/menu">+</a>
+            <a href="/menu"><img src="/menu.png" alt=""></a>
         </div>
         <img src="/striscia.png" class="immagineStriscia" alt="">
         <article>
